--- a/app/src/main/res/layout/fragment_forecast.xml
+++ b/app/src/main/res/layout/fragment_forecast.xml
@@ -5,9 +5,20 @@
     android:layout_height="match_parent"
     tools:context=".mvp.ui.ForecastFragment">
 
-    <TextView
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"/>
+
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/city"/>
+        android:layout_height="wrap_content"
+        android:id="@+id/recycleView"
+        android:visibility="invisible">
+
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 </FrameLayout>
