set permissions request

--- a/app/src/main/res/layout/day_of_week_item.xml
+++ b/app/src/main/res/layout/day_of_week_item.xml
@@ -8,5 +8,6 @@
         android:id="@+id/dayOfWeekTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"/>
+        android:layout_margin="5dp"
+        android:textSize="20sp"/>
 </LinearLayout>
