--- a/app/src/main/res/layout/fragment_forecast.xml
+++ b/app/src/main/res/layout/fragment_forecast.xml
@@ -5,6 +5,13 @@
     android:layout_height="match_parent"
     tools:context=".mvp.ui.forecast.ForecastFragment">
 
+    <ImageView
+        android:id="@+id/div"
+        android:layout_width="match_parent"
+        android:layout_height="7dp"
+        android:src="@drawable/div"
+        tools:ignore="ContentDescription" />
+
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
@@ -15,6 +22,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
         android:id="@+id/recycleView"
         android:visibility="invisible">
 
