--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,15 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:actionBarStyle">@style/MyActionBar</item>
+        <item name="android:background" tools:ignore="PrivateResource">@color/cardview_light_background</item>
+    </style>
+
+    <style name="MyActionBar"
+        parent="ThemeOverlay.AppCompat.ActionBar">
+        <item name="android:textColor" tools:ignore="PrivateResource">@color/cardview_light_background</item>
     </style>
 
 </resources>
